--- a/29779.html
+++ b/29779.html
@@ -1,2 +1,12 @@
-29779@iitu.edu.kz
-Aishagul
+<!DOCTYPE html>
+<html>
+<head>
+<title>hijackthisdomain</title>
+</head>
+<body>
+
+<h1>Aishagul</h1>
+<p>29779@iitu.edu.kz</p>
+
+</body>
+</html>
