--- a/29779.html
+++ b/29779.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>Aishagul</h1>
-<p>29779@iitu.edu.kz</p>
+<h1>Elsultan Nurpeis</h1>
+<p>29777@iitu.edu.kz</p>
 
 </body>
 </html>
